# ds-u2-actividad-1-listasenlazadassimples-MI2903

./: CMakeLists.txt  Doxyfile  ListaGestion.h  ListaSensor.h  README.md  SensorBase.h  SensorPresion.h  SensorTemperatura.h  SimuladorArduino.h  main.cpp
